<resources>
    <string name="app_name">CariBuku</string>
    <string name="poster">poster movie</string>
    <string name="author">Author :</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="cari_buku">CariBuku</string>
    <string name="rizky_alfikri">Rizky AlFikri</string>
    <string name="rizkiingvalt_yahoo_co_id">rizkiingvalt@yahoo.co.id</string>
    <string name="title">Title :</string>
    <string name="publised_date">Publised Date :</string>
    <string name="publisher">Publisher :</string>
    <string name="description">Description</string>
    <string name="detail_information">Detail Information</string>
    <string name="detailActivity">detailActivity</string>
    <string name="aboutActivity">aboutActivity</string>
    <string name="no_desc">No description</string>
    <string name="todo">TODO</string>
</resources>
