<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailActivity">

    <ImageView
            android:id="@+id/img_banner"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:backgroundTint="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitXY"
            android:background="@color/primary_light"
            tools:ignore="ContentDescription"
            tools:src="@drawable/edensor"/>

    <ImageView
            android:id="@+id/img_photo"
            android:layout_width="135dp"
            android:layout_height="180dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="284dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_banner"
            tools:ignore="ContentDescription"
            tools:src="@drawable/edensor"/>

    <TextView
            android:id="@+id/txt_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/secondary_text"
            android:ellipsize="end"
            android:maxLines="3"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/text_publish_date"
            app:layout_constraintTop_toTopOf="@+id/text_title"
            app:layout_constraintVertical_bias="0.0"
            tools:text="The Sun Of Genosis and Elevated Thing" />

    <TextView
            android:id="@+id/txt_authors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/secondary_text"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_author"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/text_publish_date"
            app:layout_constraintTop_toTopOf="@+id/text_author"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Pram Ananta Noer Dragonia Ingvalt" />

    <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/ratting_bar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:numStars="5"
            android:stepSize="0.5"
            android:theme="@style/RatingBar"
            app:layout_constraintStart_toEndOf="@+id/img_photo"
            app:layout_constraintTop_toBottomOf="@+id/text_publish_date" />

    <TextView
            android:id="@+id/txt_publiser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="14sp"
            android:textColor="@color/secondary_text"
            app:layout_constraintBottom_toBottomOf="@+id/text_publisher"
            app:layout_constraintStart_toEndOf="@+id/text_publish_date"
            app:layout_constraintTop_toTopOf="@+id/text_publisher"
            app:layout_constraintVertical_bias="1.0"
            tools:text="PT Mizan Publika"/>

    <TextView
            android:id="@+id/text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/description"
            android:textColor="@color/primary_text"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_photo" />

    <TextView
            android:id="@+id/txt_publised_date"
            android:textColor="@color/secondary_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_publish_date"
            app:layout_constraintStart_toEndOf="@+id/text_publish_date"
            app:layout_constraintTop_toTopOf="@+id/text_publish_date"
            tools:text="2-2-2005" />

    <TextView
            android:id="@+id/txt_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/secondary_text"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_description"
            app:layout_constraintVertical_bias="0.0"
            tools:text="KATA PENGANTAR Menyapa Bumi
            , Menyembah Hyang Ilahi: Tinjauan Teologis
           natas Lingkungan Hidup. Judul buku ini sudah menunjukkan
            arah tulisan-tulisan \u003cbr\u003e\nyang disajikan di dalamnya. Objek materi kajiannya adalah hal-hal" />

    <TextView
            android:id="@+id/text_title"
            android:layout_width="0dp"
            android:textColor="@color/primary_text"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/title"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_photo"
            app:layout_constraintStart_toEndOf="@+id/img_photo"
            app:layout_constraintTop_toBottomOf="@+id/img_banner"
            app:layout_constraintVertical_bias="0.0" />

    <TextView
            android:id="@+id/text_author"
            android:layout_width="wrap_content"
            android:textColor="@color/primary_text"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/author"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/img_photo"
            app:layout_constraintTop_toBottomOf="@+id/txt_title" />

    <TextView
            android:id="@+id/text_publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/publisher"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/img_photo"
            app:layout_constraintTop_toBottomOf="@+id/txt_authors" />

    <TextView
            android:id="@+id/text_publish_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/primary_text"
            android:text="@string/publised_date"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/img_photo"
            app:layout_constraintTop_toBottomOf="@+id/text_publisher" />


    <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_banner" />

</androidx.constraintlayout.widget.ConstraintLayout>